# ROMP

./: .gitignore  README.md  basic_usage.ipynb  jupyter_notebook_config.ipynb  pyproject.toml  run_momp.ipynb
MOMP/: driver.py
MOMP/app/: bin_skill_score.py  onset_time_series.py  spatial_far_mr_mae.py
MOMP/graphics/: .maps.py.swp  heatmap.py  maps.py  rainfall_time_series.py  reliability.py
MOMP/io/: output.py
MOMP/lib/: convention.py  loader.py  parser.py
MOMP/metrics/: error.py  skill.py
MOMP/params/: .config.in.swp  .region_def.py.swp  config.in
MOMP/stats/: .score.py.swp  benchmark.py  bins.py  climatology.py  score.py
MOMP/utils/: printing.py  region.py  standard.py
demo/data/: jjas_seasonal_mask_0p25.nc
demo/et/: config_det.in  config_et_det.in  config_et_prob.in  config_et_prob_gencast.in  config_prob.in  demo1_onset_detection.ipynb  demo2_skill_by_region_lead_time.ipynb  ethiopia_icpac_onset_dates_tutorial_gdrivedata.ipynb
docs/: experiments.ipynb  exploration.ipynb  package_run_guidance.ipynb  package_run_guidance_et.ipynb
momp/app/: bin_skill_score.py  onset_spatial.py  spatial_far_mr_mae.py
momp/graphics/: func_map.py  onset_map.py  panel_map_error.py  panel_portrait_skill.py
momp/io/: dict.py  input.py
momp/lib/: assertion.py  control.py  convention.py  loader.py  parser.py
momp/params/: config.in  region_def.py
momp/stats/: benchmark.py  bins.py  climatology.py  detect.py
momp/utils/: land_mask.py  practical.py  printing.py  standard.py  visual.py
