[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "momp"
version = "0.0.1"
description = "Rainy season Onset Metrics Package (ROMP)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }

authors = [
  { name = "Bo Dong", email = "bodong@uchicago.edu" }
]

dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "matplotlib",
  "geopandas",
  "netcdf4",
  "scipy",
  "seaborn",
  "regionmask",
  "zarr",
  "cartopy",
  "fsspec==2025.3.2.*"
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
momp = ["params/config.in"]
#momp = ["params/*.in", "demo/**/*"]

[tool.setuptools.packages.find] 
where = ["."]


[project.optional-dependencies]
dev = [
#  "pathlib",
#  "argparse",
  "dask",
  "pytest",
  "jupyterlab",
  "black",
  "ruff",
  "ipython",
  "gcsfs",
]

[project.scripts]
momp-run = "momp.driver:run_momp"

